--- a/social2012/tex/nodeTopology_social2012.tex
+++ b/social2012/tex/nodeTopology_social2012.tex
@@ -5,7 +5,7 @@
 \usepackage{amsmath,amsthm,amssymb,amsfonts,MnSymbol,epsfig,graphicx,algorithm,algorithmic}
 
 %\title{Embedding Nodes via their Local Network Topology for Role Descriptors in Social Networks}
-\title{Embedding Nodes via their Local Network Topology for Role Discovery in Networks}
+\title{Embedding Nodes via their Local Network Topology for Identifying Roles in Networks}
 %\title{Embedding Graph Vertices via Local Network Topology for Identifying Role-Types in Social Networks}
 
 \author{
@@ -26,14 +26,14 @@ Pittsburgh, PA 15213 \\
 \maketitle
 
 \begin{abstract}
-This paper proposes a method for characterizing the local network topology in the vicinity of each vertex in a graph. The method provides a Euclidean embedding of each node based on its surrounding network structure. We show how descriptors of the local topologies around vertices can be used to quantify the types of local structure present in a network and identify groups of nodes that have similar roles in relation to the surrounding network. Our method for embedding makes use of the Fixed Node Edit Distance (FNED), a distance metric for the local topologies around nodes, which we define. We present algorithms for computing the FNED, show how it can be used to embed the local topologies of nodes in Euclidean space, and demonstrate the embedding on multiple publicly available network datasets. Results show the ability of this method to characterize diverse regions of network structure and identify groups of entities with similar roles in networks.
+This paper proposes a method for characterizing the local network topology in the vicinity of each vertex in a graph. The method provides a Euclidean embedding of each node based on its surrounding network structure. We show how descriptors of the local topologies around vertices can be used to quantify the types of local structure present in a network and identify groups of nodes that have similar roles in relation to their neighbors. Our method for embedding makes use of the Fixed Node Edit Distance (FNED), a distance we define between the local topologies around nodes. We present algorithms for computing the FNED, show how it can be used to embed the local topologies of nodes in Euclidean space, and demonstrate the embedding on multiple publicly available network datasets. Results show the ability of this method to characterize diverse regions of network structure and identify groups of nodes with similar roles.
 \end{abstract}
 
 
 \section{Introduction}
 \label{sec:intro}
 
-The topological structure in the vicinity of a node in a network has the potential to provide useful information about the character of the node and the role it plays in relation to surrounding nodes. Networks may contain groups of nodes that have similar local topologies; identifying these groups sheds insight into the range and types of roles played by the entities in a network. In the context of social networks, the local topology around a person includes connections to friends, as well as the connections between friends or between friends of friends. The local network structure will depend both on the immediate relations of the person as well as on the characteristics of the friend groups in which the person resides.% Descriptors of local network topology are also relevant in realms such as web spam detection and studies of roles in neural or other biological networks.
+The topological structure in the vicinity of a node in a network has the potential to provide useful information about the role of the node in relation to its neighbors. Networks may contain groups of nodes that have similar local topologies; identifying these groups sheds insight into the range and types of roles played by the entities in a network. %For example, in the context of social networks, the local topology around a person includes connections to friends, as well as the connections between friends or between friends of friends. The local network structure includes both the immediate relations of the person as well as on the characteristics of the friend groups in which the person resides.% Descriptors of local network topology are also relevant in realms such as web spam detection and studies of roles in neural or other biological networks.
 
 Node degree can be viewed as a simple descriptor of local topology. However, it does not capture the potentially complex relations among the immediate neighbors of a node, nor does it incorporate information about the network structure greater than one step away. Additionally, as the degree of a node grows, so does the amount of possible relations among its neighbors. In order to capture the increasing complexity of the local topology, we desire a richer descriptor of the local edge structure that is able to encode the local topology as its complexity scales with node degree.
 
@@ -94,7 +94,7 @@ This paper is focuses only on undirected graphs, through it can be extended to d
 
 \section{Algorithms for Embedding}
 \label{sec:algos}
-The algorithms in this section describe the process of embedding the nodes of a graph in Euclidean space based on their local topology. Algorithm~\ref{alg:overviewEmbedding} gives an overview of this method.
+The algorithms in this section describe the process of embedding the nodes of a graph in Euclidean space based on their local topology. Algorithm~\ref{alg:overviewEmbedding} gives an overview of this process. The embedding into Euclidean space is wholly dependent upon computation of the FNED between the local topologies of the nodes. The algorithms in the following sections provide both exact and approximate methods for computing the FNED, given certain graph types.
 
 \begin{algorithm}[h!tbp]
 \caption{Node Embedding via Local Topologies}
@@ -110,12 +110,11 @@ The algorithms in this section describe the process of embedding the nodes of a 
 \end{algorithmic}
 \end{algorithm}
 
-The embedding into Euclidean space is wholly dependent upon computation of the FNED between the local topologies of the nodes. The algorithms in the following sections provide both exact and approximate methods for computing the FNED, given certain graph types.
 
 \newpage
 \subsection{Deterministic FNED for Trees}
 
-In Algorithm~\ref{alg:trueFnedTrees} we give a polynomial time algorithm for computing the FNED between nodes in a tree for 2-step local topologies. We will give approximate algorithms for computing the FNED between nodes in an arbitrary graph in Section~\ref{sec:approxFned}, as the FNED is, in general, not possible to compute exactly in polynomial time. Algorithm~\ref{alg:trueFnedTrees} can also be used as a basis for approximate FNED computation in arbitrary graphs for $2$-step local topologies.
+In Algorithm~\ref{alg:trueFnedTrees} we give a polynomial time algorithm for computing the FNED between nodes in a tree for 2-step local topologies. We will give approximate algorithms for computing the FNED between nodes in an arbitrary graph in Section~\ref{sec:approxFned}, as the FNED is, in general, not possible to compute exactly in polynomial time.  %Algorithm~\ref{alg:trueFnedTrees} can also be used as a basis for approximate FNED computation in arbitrary graphs for $2$-step local topologies.
 \begin{algorithm}[h!tbp]
 \caption{Deterministic FNED for Trees}
 \label{alg:trueFnedTrees}
