commiting the tex/pdf version i actually submitted to social2012

--- a/social2012/tex/nodeTopology_social2012.tex
+++ b/social2012/tex/nodeTopology_social2012.tex
@@ -33,7 +33,7 @@ This paper proposes a method for characterizing the local network topology in th
 \section{Introduction}
 \label{sec:intro}
 
-The topological structure in the vicinity of a node in a network has the potential to provide useful information about the role of the node in relation to its neighbors. Networks may contain groups of nodes that have similar local topologies; identifying these groups sheds insight into the range and types of roles played by the entities in a network. %For example, in the context of social networks, the local topology around a person includes connections to friends, as well as the connections between friends or between friends of friends. The local network structure includes both the immediate relations of the person as well as on the characteristics of the friend groups in which the person resides.% Descriptors of local network topology are also relevant in realms such as web spam detection and studies of roles in neural or other biological networks.
+The topological structure in the vicinity of a node in a network contains information about the role of the node in relation to its neighbors. For example, in the context of social networks, the local topology around a person includes links to friends, as well as the links between friends or between friends of friends. Networks may contain groups of nodes that have similar local topologies; identifying these groups sheds insight into the types of roles that exist in a network. %For example, in the context of social networks, the local topology around a person includes connections to friends, as well as the connections between friends or between friends of friends. The local network structure includes both the immediate relations of the person as well as on the characteristics of the friend groups in which the person resides.% Descriptors of local network topology are also relevant in realms such as web spam detection and studies of roles in neural or other biological networks.
 
 Node degree can be viewed as a simple descriptor of local topology. However, it does not capture the potentially complex relations among the immediate neighbors of a node, nor does it incorporate information about the network structure greater than one step away. Additionally, as the degree of a node grows, so does the amount of possible relations among its neighbors. In order to capture the increasing complexity of the local topology, we desire a richer descriptor of the local edge structure that is able to encode the local topology as its complexity scales with node degree.
 
